# IdleBotEmpire

./: CMakeLists.txt  README.md
res/: format.md  ui.json
src/: atlas.c  atlas.h  atlas_data.h  config.h  font.c  font.h  main.c  math.h  ui.c  ui.h
